--- a/.env
+++ b/.env
@@ -11,7 +11,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=mimwater
+DB_DATABASE=meem
+# DB_DATABASE=mimwater
 DB_USERNAME=root
 DB_PASSWORD=
 
